To be honest.. I don't know

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -18,5 +18,8 @@
 
 </ion-menu>
 
+<drawer [options]="drawerOptions"></drawer>
+
+
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
 <ion-nav [root]="menuPage" #nav></ion-nav>
