--- a/src/components/drawer/drawer.html
+++ b/src/components/drawer/drawer.html
@@ -1,15 +1,58 @@
 <ion-header text-center>
-  <h1>Pedido </h1>
+  <ion-navbar>
+    <h1>Tus Pedido {{ pedidos.length }}</h1>
+    <ion-buttons end>
+      <button ion-button icon-only >
+        <ion-icon name="shuffle"></ion-icon>
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 </ion-header>
+
 <ion-content>
   <ion-note>primero plato</ion-note>
+
   <ion-grid>
-    <ion-row *ngFor="let pedido of pedidos">
-      <ion-col>
-        <button ion-item>{{ categorias[pedido.categoria].name }} lolo</button>
-          <button>{{ categorias[0] }}</button>
+    <ion-row
+      *ngFor="let pedido of pedidos">
+      <ion-col col-6 >
+        {{ categorias[pedido.categoria].platos[pedido.plato].name }}
       </ion-col>
+      <ion-col col-2>
+        {{ categorias[pedido.categoria].platos[pedido.plato].price }}€
+      </ion-col>
+      <ion-col col-2>
+        <ion-icon name="brush"></ion-icon>
+      </ion-col>
+      <ion-col col-2>
+        <ion-icon name="trash"></ion-icon>
+      </ion-col>
+
+      <ion-row *ngIf="platoEdit == true">
+        <form #f="ngForm" (ngSubmit)="onComment(f, i)">
+          <ion-col col-10>
+            <ion-item>
+              <ion-input
+                max="150"
+                placeholder="Quieres comentar algo para el cocinero?.."
+                name="comment"
+                ngModel
+                required></ion-input>
+            </ion-item>
+          </ion-col>
+          <ion-col col-2>
+            <button ion-button
+                    type="submit"
+                    [disabled]="!f.valid"
+                    outline
+                    icon-only><ion-icon name="paper-plane"></ion-icon>
+            </button>
+          </ion-col>
+        </form>
+      </ion-row>
     </ion-row>
+
+
   </ion-grid>
   <ng-content></ng-content>
 </ion-content>
