--- a/src/components/drawer/drawer.html
+++ b/src/components/drawer/drawer.html
@@ -14,7 +14,7 @@
 
   <ion-grid>
     <ion-row
-      *ngFor="let pedido of pedidos">
+      *ngFor="let pedido of pedidos, let i = index">
       <ion-col col-6 >
         {{ categorias[pedido.categoria].platos[pedido.plato].name }}
       </ion-col>
@@ -22,13 +22,15 @@
         {{ categorias[pedido.categoria].platos[pedido.plato].price }}€
       </ion-col>
       <ion-col col-2>
-        <ion-icon name="brush"></ion-icon>
+        <ion-icon name="brush"
+                  (click)="onEdit(i)"></ion-icon>
       </ion-col>
       <ion-col col-2>
-        <ion-icon name="trash"></ion-icon>
+        <ion-icon name="trash"
+                  (click)="onDelete(i)"></ion-icon>
       </ion-col>
 
-      <ion-row *ngIf="platoEdit == true">
+      <ion-row *ngIf="platoEdit[i] == true">
         <form #f="ngForm" (ngSubmit)="onComment(f, i)">
           <ion-col col-10>
             <ion-item>
@@ -50,9 +52,36 @@
           </ion-col>
         </form>
       </ion-row>
+
     </ion-row>
-
-
   </ion-grid>
+
+  <ion-note>segundo plato</ion-note>
+  <br>
+  <ion-note>postres</ion-note>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col col-7 text-center>
+        <button ion-button
+                round
+                small
+                (click)="onSendPedidos()"
+                >Enviar Pedidos</button>
+      </ion-col>
+      <ion-col col-3>
+        €
+      </ion-col>
+      <ion-col col-2>
+        <button
+          ion-button
+          clear
+          icon-only>
+          <ion-icon name="cart"></ion-icon>
+        </button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
   <ng-content></ng-content>
 </ion-content>
